--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ path = "src/lib.rs"
 crate-type =["cdylib"]
 
 [dependencies]
-wasm-bindgen = "=0.2.61"
+serde = { version = "1.0", features = ["derive"] } 
+wasm-bindgen = { version = "=0.2.61", features = ["serde-serialize"] }
